--- a/skel/.htaccess
+++ b/skel/.htaccess
@@ -1,14 +1,15 @@
-<IfModule mod_rewrite.c>
+#<IfModule mod_rewrite.c>
     RewriteEngine on
+    RewriteBase /skel
 
     RewriteRule ^(index.php)$ index.php [L]
+    RewriteRule ^templates.*$ index.php [L]
 
     #write http://www.domain.com/actionName to index.php?accion=actionName
-    RewriteCond %{REQUEST_URI} ^/([a-zA-Z0-9_-]+)$
-    RewriteRule . index.php?accion=%1 [L] 
+    RewriteRule ^([a-zA-Z0-9_-]+)$ index.php?accion=$1 [L] 
 
     #write http://www.domain.com/actionName/actionParam to index.php?accion=actionName&params=actionParam
-    RewriteCond %{REQUEST_URI} ^/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)$
-    RewriteRule . index.php?accion=%1&params=%2 [L] 
-</IfModule>
-
+    #RewriteCond %{REQUEST_URI} ^/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)$
+    #RewriteRule . index.php?accion=%1&params=%2 [L] 
+    RewriteRule ^([a-zA-Z0-9_-]+)/([/a-zA-Z0-9_-]+)$ index.php?accion=$1&params=$2 [L]
+#</IfModule>
